<resources>
    <string name="app_name">PandaStore</string>

    <string name="login_title">账号登录</string>
    <string name="login_name">账号</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_psd">密码</string>
    <string name="login_psd_hint">请输入密码</string>

    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="login_remember">记住密码</string>
    <string name="login_forget">忘记密码</string>

    <string name="regist_title">账号注册</string>
    <string name="forget_title">忘记密码</string>

    <string name="regist_name">输入账号</string>
    <string name="regist_name_hint">请输入账号</string>
    <string name="regist_psd_1">输入密码</string>
    <string name="regist_psd_hint">请输入密码</string>
    <string name="regist_psd_2">确认密码</string>
    <string name="regist_psd_2_hint">请输入验证密码</string>
    <string name="regist_doregist">注册</string>
    <string name="regist_docancel">返回</string>

    <string name="forget_name">用户账号</string>
    <string name="forget_name_hint">请输入用户账号</string>
    <string name="forget_tel">手机号码</string>
    <string name="forget_tel_hint">请输入手机号码</string>
    <string name="forget_psd_1">输入密码</string>
    <string name="forget_psd_hint">请输入密码</string>
    <string name="forget_psd_2">确认密码</string>
    <string name="forget_psd_2_hint">请输入验证密码</string>
    <string name="forget_verify_hint">验证码</string>
    <string name="forget_verify_get">获取</string>
    <string name="forget_do">重置</string>
    <string name="forget_docancel">返回</string>

    <string name="personal_about_us">关于我们</string>
    <string name="personal_clear_cache">清除缓存</string>
    <string name="personal_download_manager">下载管理</string>
    <string name="personal_feedack">投诉建议</string>
    <string name="personal_game_count">共充值 %1$d 款游戏</string>
    <string name="personal_gift">我的礼包</string>
    <string name="personal_info_account">账号</string>
    <string name="personal_info_avatar">头像</string>
    <string name="personal_info_data">个人资料</string>
    <string name="personal_info_nickname">昵称</string>
    <string name="personal_info_username">用户名</string>
    <string name="personal_login_register">登录/注册</string>
    <string name="personal_login_tips">点击登录享受更多福利</string>
    <string name="personal_my_game">我的游戏</string>
    <string name="personal_my_wallet">我的钱包</string>
    <string name="personal_order_manager">充值记录</string>
    <string name="personal_quit">退出账号</string>
    <string name="personal_recharge">充值</string>
    <string name="personal_security">安全中心</string>
    <string name="personal_sign_days">已签到%1$d天></string>
    <string name="personal_sign_in_prompt">签到领奖励</string>
    <string name="account_balance">账户余额</string>
    <string name="game_coupon">卡券</string>
    <string name="game_balance">游戏余额</string>
    <string name="red_packet_balance">红包余额</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="person_id_card">实名认证</string>
    <string name="person_nickname">修改用户名</string>

    <string name="detail_des">游戏简介</string>
    <string name="detail_gift">优惠券</string>
    <string name="detail_info">详细信息</string>
    <string name="detail_info_version">当前版本</string>
    <string name="detail_info_size">大小</string>
    <string name="detail_info_time">更新时间</string>

    <string name="recharge_login_tip">您还未登陆</string>
    <string name="recharge_login">登陆</string>

    <string name="more">更多</string>
    <string name="down">下载</string>
    <string name="get_coupon">领取</string>

    <string name="game_balance_unit">游戏余额(元)</string>
    <string name="game_charge_account_title">充值账号</string>
    <string name="game_charge_amount">充值金额</string>
    <string name="game_charge_amount_100">100元</string>
    <string name="game_charge_amount_1000">1000元</string>
    <string name="game_charge_amount_2000">2000元</string>
    <string name="game_charge_amount_500">500元</string>
    <string name="game_charge_amount_hint">自定义充值金额</string>
    <string name="game_charge_type">充值方式</string>
    <string name="game_charge_type_ali">支付宝</string>
    <string name="game_charge_type_wx">微信</string>
    <string name="game_charge_confirm">确认支付</string>
    <string name="game_charge_explain">充值说明</string>
    <string name="game_charge_explain_detail">1.充值的金额必须为整数（人民币对应平台币比值1：10，1人民币=10平台币）。&lt;br>2.须使用本&lt;font color=#00a4ff>App登录的账号&lt;/font>并且&lt;font color=#00a4ff>登录App内下载&lt;/font>的游戏才可享受App折扣和福利。&lt;br>3.玩家充值后当前账号会获得游戏余额（非游戏道具），玩家在游戏内购买道具即可使用充值的游戏余额进行支付。&lt;br>4.您可以在App-我的-游戏余额查询您游戏剩余的游戏余额。&lt;br>5.使用App红包抵扣时，先抵扣红包后打折。</string>

    <string name="dialog_suggest">投诉建议</string>
    <string name="dialog_suggest_tip">请输入投诉建议</string>
    <string name="dialog_suggest_tip2">请输入联系方式</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_send">提交</string>

    <string name="dialog_aboutus_detail">1.充值的金额必须为整数（人民币对应平台币比值1：10，1人民币=10平台币）。&lt;br>2.须使用本&lt;font color=#00a4ff>App登录的账号&lt;/font>并且&lt;font color=#00a4ff>登录App内下载&lt;/font>的游戏才可享受App折扣和福利。&lt;br>3.玩家充值后当前账号会获得游戏余额（非游戏道具），玩家在游戏内购买道具即可使用充值的游戏余额进行支付。&lt;br>4.您可以在App-我的-游戏余额查询您游戏剩余的游戏余额。&lt;br>5.使用App红包抵扣时，先抵扣红包后打折。</string>
    <string name="dialog_aboutus_close">确定</string>

    <string name="dialog_client_service_detail">1.客户qq：1232323232。&lt;br>2.客服电话：1212321321</string>
    <string name="dialog_client_service_close">确定</string>

    <string name="dialog_change_nickname">修改用户名</string>
    <string name="dialog_change_nickname_input">请输入新用户名</string>

    <string name="dialog_id_card">实名认证</string>
    <string name="dialog_id_card_input_name">请输入姓名</string>
    <string name="dialog_id_card_input">请输入身份证</string>

    <string name="dialog_change_psd">修改密码</string>
    <string name="dialog_change_psd_tip">请输入旧密码</string>
    <string name="dialog_change_psd_tip_new">请输入新密码</string>
    <string name="dialog_change_psd_tip_confirm">请输入确认密码</string>

    <string name="dialog_bind">绑定手机</string>
    <string name="dialog_bind_tip">请输入手机号码</string>
    <string name="dialog_bind_tip_verify">请输入验证码</string>
    <string name="dialog_bind_tip_get_verify">获取</string>

    <string name="dialog_coupon">卡券</string>
    <string name="dialog_coupon_copy">复制</string>
    <string name="dialog_coupon_down">下载</string>
    <string name="dialog_coupon_code">卡券码</string>
    <string name="dialog_coupon_close">关闭</string>


</resources>
