<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recharge_view">
        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/game_charge_confirm_btn">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:background="@color/white"
                    android:paddingLeft="16.0dip"
                    android:paddingRight="16.0dip"
                    android:layout_width="match_parent"
                    android:layout_height="56.0dip"
                    android:layout_marginTop="10.0dip">
                    <TextView
                        android:textSize="@dimen/text_size_small"
                        android:textColor="#de000000"
                        android:id="@+id/charge_user_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/game_charge_account_title"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:textSize="@dimen/text_size_small"
                        android:textColor="#00a4ff"
                        android:id="@+id/charge_user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16.0dip"
                        android:layout_toRightOf="@id/charge_user_title"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:background="@color/white"
                    android:padding="16.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip">
                    <TextView
                        android:textSize="@dimen/text_size_small"
                        android:textColor="#de000000"
                        android:id="@+id/game_charge_amount_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/game_charge_amount" />
                    <EditText
                        android:layout_width="0.0dip"
                        android:layout_height="0.0dip"
                        android:hint="@string/app_name"
                        android:inputType="text" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/game_charge_amount_lin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16.0dip"
                        android:layout_below="@id/game_charge_amount_title">
                        <TextView
                            android:textSize="@dimen/text_size_small"
                            android:textColor="#00a4ff"
                            android:gravity="center"
                            android:id="@+id/game_charge_amount_100"
                            android:background="@drawable/shape_charge_amount_item"
                            android:layout_width="0.0dip"
                            android:layout_height="48.0dip"
                            android:layout_marginRight="4.0dip"
                            android:text="@string/game_charge_amount_100"
                            android:layout_weight="1.0" />
                        <TextView
                            android:textSize="@dimen/text_size_small"
                            android:textColor="#00a4ff"
                            android:gravity="center"
                            android:id="@+id/game_charge_amount_500"
                            android:background="@drawable/shape_charge_amount_item"
                            android:layout_width="0.0dip"
                            android:layout_height="48.0dip"
                            android:layout_marginRight="4.0dip"
                            android:text="@string/game_charge_amount_500"
                            android:layout_weight="1.0" />
                        <TextView
                            android:textSize="@dimen/text_size_small"
                            android:textColor="#00a4ff"
                            android:gravity="center"
                            android:id="@+id/game_charge_amount_1000"
                            android:background="@drawable/shape_charge_amount_item"
                            android:layout_width="0.0dip"
                            android:layout_height="48.0dip"
                            android:layout_marginRight="4.0dip"
                            android:text="@string/game_charge_amount_1000"
                            android:layout_weight="1.0" />
                        <TextView
                            android:textSize="@dimen/text_size_small"
                            android:textColor="#00a4ff"
                            android:gravity="center"
                            android:id="@+id/game_charge_amount_2000"
                            android:background="@drawable/shape_charge_amount_item"
                            android:layout_width="0.0dip"
                            android:layout_height="48.0dip"
                            android:text="@string/game_charge_amount_2000"
                            android:layout_weight="1.0" />
                    </LinearLayout>
                    <EditText
                        android:textSize="@dimen/text_size_small"
                        android:textColor="#de000000"
                        android:textColorHint="#42000000"
                        android:id="@+id/game_charge_amount_edit"
                        android:background="@drawable/shape_charge_edit"
                        android:paddingLeft="16.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="48.0dip"
                        android:layout_marginTop="8.0dip"
                        android:hint="@string/game_charge_amount_hint"
                        android:maxLength="5"
                        android:layout_below="@id/game_charge_amount_lin"
                        android:inputType="number" />
                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:padding="16.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="10.0dip">
                    <TextView
                        android:textSize="@dimen/text_size_small"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/game_charge_explain" />
                    <TextView
                        android:textSize="@dimen/text_size_smallest"
                        android:textColor="#8a000000"
                        android:id="@+id/game_charge_explain_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16.0dip"
                        android:lineSpacingExtra="12.0dip" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <Button
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/game_charge_confirm_btn"
            android:background="#00a4ff"
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:text="@string/game_charge_confirm"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/login_tip_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_peronal_head">

        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120.0dip">
            <ImageView
                android:id="@+id/recharge_personal_avatar"
                android:layout_width="74.0dip"
                android:layout_height="74.0dip"
                android:src="@drawable/ic_personal_default_avatar"
                android:layout_centerHorizontal="true" />

            <TextView
                android:textSize="@dimen/text_size_smaller"
                android:textColor="@color/text_grey"
                android:id="@+id/recharge_not_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge_login_tip"
                android:layout_marginTop="6.0dip"
                android:layout_below="@id/recharge_personal_avatar"
                android:layout_centerHorizontal="true" />

            <TextView
                android:textSize="@dimen/text_size_smaller"
                android:textColor="@color/white"
                android:id="@+id/recharge_sign_in"
                android:background="@drawable/shape_rectangle_blue"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_56"
                android:layout_marginRight="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/recharge_login"
                android:layout_below="@id/recharge_not_login"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>