<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:text="@string/dialog_change_nickname"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:gravity="center"
            android:id="@+id/title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:text="@string/dialog_coupon_code"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15"
            android:padding="@dimen/dp_5"
            android:gravity="center"
            android:background="@drawable/suggest_edittext"
            android:id="@+id/coupon_code"/>




        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#c0c0c0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/dialog_coupon_close"
                android:textSize="17dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/copy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="#a0000000"
                android:text="@string/dialog_coupon_copy"
                android:textSize="17dp"
                android:gravity="center"
                />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
