<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:text="@string/dialog_bind"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                android:text="@string/dialog_bind_tip"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"/>

            <EditText
                android:id="@+id/tel_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/suggest_edittext"
                android:layout_margin="@dimen/dp_5"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/black"
                android:padding="@dimen/dp_5"
                android:gravity="top|left"
                android:inputType="number"
                android:lines="1"
                android:maxLength="11"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                android:text="@string/dialog_bind_tip_verify"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/verify"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/suggest_edittext"
                    android:layout_marginRight="@dimen/dp_10"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/black"
                    android:padding="@dimen/dp_5"
                    android:gravity="center"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="6"/>

                <Button
                    android:id="@+id/getverify"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_30"
                    android:layout_weight="1"
                    android:background="@drawable/login_button"
                    android:text="@string/dialog_bind_tip_get_verify"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_12"
                    android:lines="1"
                    android:gravity="center"/>

            </LinearLayout>


        </LinearLayout>




        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#c0c0c0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/dialog_cancel"
                android:textSize="17dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="#a0000000"
                android:text="@string/dialog_send"
                android:textSize="17dp"
                android:gravity="center"
                />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
